--- a/references.html
+++ b/references.html
@@ -34,7 +34,7 @@
         <div class="text-link5">
           <div class="text">
             <span class="text-txt">
-              <a href=""
+              <a href="https://meusestudos.github.io/TriploBrilho/"
                 target="_blank">
                 Pages do GitHub
               </a>
