--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="text">
             <span class="text-txt">
               <a href="videos/PagesGitHub.mp4" target="_blank">
-                Vídeo sobre o Pages do GitHub
+                Vídeo sobre o GitHub Pages
               </a>
               <span> (Implementação do protótipo)</span>
             </span>
