--- a/references.html
+++ b/references.html
@@ -36,7 +36,7 @@
             <span class="text-txt">
               <a href="https://meusestudos.github.io/TriploBrilho/"
                 target="_blank">
-                Pages do GitHub
+                GitHub Pages
               </a>
               <span> (Implementação do protótipo)</span>
             </span>
